<resources>
    <string name="app_name">Medication alarm</string>

    <!-- Main Activity/Fragment -->
    <string name="empty_view_text">Press the Floating Action Button to add a medical alarm!</string>

    <!-- Edit Alarm Activity/Fragment -->
    <string name="time">Time</string>
    <string name="label">Label</string>
    <string name="days">Days</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="add_label_hint">Add a label!</string>
    <string name="update_complete">Changes Saved</string>
    <string name="update_failed">Update Failed</string>
    <string name="delete_complete">Alarm Deleted</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="delete_dialog_title">Confirm Delete Alarm</string>
    <string name="delete_dialog_content">Are you sure you would like to delete this alarm?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Edit Alarm Menu -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- Alarm Landing Page Activity/Fragment -->
    <string name="launch_main_activity">Launch Main Activity</string>
    <string name="dismiss">Dismiss</string>

    <!-- Days -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- Notification -->
    <string name="channel_name">Simple Alarms</string>
    <string name="medication_name">Medication Name</string>
    <string name="duration">Duration</string>
    <string name="multiply">X</string>
    <string name="quantity">Quantity</string>
    <string name="times_in_a_day">Times in a day</string>
    <string name="start_time">Start Time</string>
    <string name="_1">1</string>
    <string name="third_time">Third Time</string>
    <string name="second_time">Second Time</string>

</resources>
