<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_alarm_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medication_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/titleDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/duration"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleDuration"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/multiply"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleDuration"
                android:layout_toStartOf="@+id/multiply"
                android:layout_toLeftOf="@+id/multiply">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tablets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity"
                    android:inputType="number"
                    android:minWidth="100dp"
                    android:text="@string/_1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleDuration"
                android:layout_toEndOf="@+id/multiply"
                android:layout_toRightOf="@+id/multiply">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/timeADay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/times_in_a_day"
                    android:inputType="number"
                    android:minWidth="100dp"
                    android:text="@string/_1" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/divider" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start">

                <RelativeLayout
                    android:id="@+id/rl1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/d1Tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/start_time"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TimePicker
                        android:id="@+id/edit_alarm_time_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/d1Tv"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:timePickerMode="spinner"
                        tools:targetApi="lollipop" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/d2Tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/second_time"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TimePicker
                        android:id="@+id/edit_alarm_time_picker2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/d2Tv"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:timePickerMode="spinner"
                        tools:targetApi="lollipop" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/d3Tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/third_time"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TimePicker
                        android:id="@+id/edit_alarm_time_picker3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/d3Tv"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:timePickerMode="spinner"
                        tools:targetApi="lollipop" />
                </RelativeLayout>
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/days"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="Days" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/monday"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Monday" />

            <CheckBox
                android:id="@+id/edit_alarm_mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/tuesday"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Tuesday" />

            <CheckBox
                android:id="@+id/edit_alarm_tues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/wednesday"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Wednesday" />

            <CheckBox
                android:id="@+id/edit_alarm_wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/thursday"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Thursday" />

            <CheckBox
                android:id="@+id/edit_alarm_thurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/friday"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Friday" />

            <CheckBox
                android:id="@+id/edit_alarm_fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/saturday"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Saturday" />

            <CheckBox
                android:id="@+id/edit_alarm_sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/sunday"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Sunday" />

            <CheckBox
                android:id="@+id/edit_alarm_sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />


        </androidx.gridlayout.widget.GridLayout>

    </LinearLayout>

</ScrollView>